--- a/MONOPOLish/MONOPOLish.vcxproj
+++ b/MONOPOLish/MONOPOLish.vcxproj
@@ -148,11 +148,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CPlayer.cpp" />
+    <ClCompile Include="CRealEstate.cpp" />
     <ClCompile Include="CSquare.cpp" />
     <ClCompile Include="MONOPOLish.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CPlayer.h" />
+    <ClInclude Include="CRealEstate.h" />
     <ClInclude Include="CSquare.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
