--- a/MONOPOLish/MONOPOLish.vcxproj.filters
+++ b/MONOPOLish/MONOPOLish.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="CPlayer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CRealEstate.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CSquare.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CPlayer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CRealEstate.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
