--- a/MONOPOLish/MONOPOLish.vcxproj
+++ b/MONOPOLish/MONOPOLish.vcxproj
@@ -147,15 +147,23 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CFreeParking.cpp" />
+    <ClCompile Include="CGotoJail.cpp" />
+    <ClCompile Include="CJail.cpp" />
     <ClCompile Include="CPlayer.cpp" />
     <ClCompile Include="CRealEstate.cpp" />
     <ClCompile Include="CSquare.cpp" />
+    <ClCompile Include="CStation.cpp" />
     <ClCompile Include="MONOPOLish.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CFreeParking.h" />
+    <ClInclude Include="CGotoJail.h" />
+    <ClInclude Include="CJail.h" />
     <ClInclude Include="CPlayer.h" />
     <ClInclude Include="CRealEstate.h" />
     <ClInclude Include="CSquare.h" />
+    <ClInclude Include="CStation.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
