--- a/MONOPOLish/MONOPOLish.vcxproj
+++ b/MONOPOLish/MONOPOLish.vcxproj
@@ -147,9 +147,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CBonus.cpp" />
     <ClCompile Include="CFreeParking.cpp" />
     <ClCompile Include="CGotoJail.cpp" />
     <ClCompile Include="CJail.cpp" />
+    <ClCompile Include="CPenalty.cpp" />
     <ClCompile Include="CPlayer.cpp" />
     <ClCompile Include="CRealEstate.cpp" />
     <ClCompile Include="CSquare.cpp" />
@@ -157,9 +159,11 @@
     <ClCompile Include="MONOPOLish.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CBonus.h" />
     <ClInclude Include="CFreeParking.h" />
     <ClInclude Include="CGotoJail.h" />
     <ClInclude Include="CJail.h" />
+    <ClInclude Include="CPenalty.h" />
     <ClInclude Include="CPlayer.h" />
     <ClInclude Include="CRealEstate.h" />
     <ClInclude Include="CSquare.h" />
